recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:13: error: not found: value lenght
  snowSide(levels, lenght)
                   ^Koch:15: error: not found: value lenght
  snowSide(levels, lenght)
                   ^